--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -12,3 +12,10 @@ spring:
 server:  port: 8101
   
 eureka:  client:    service-url:      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      
+      
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
